[tool.poetry]
name = "docs.peeringdb.com"
version = "1.0.0"
description = "PeeringDB Documentation site"
authors = ["Outreach Committee <outreachcom@lists.peeringdb.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
# docs
jinja2 = "^3"
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = "^1.4.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
