[project]
name = "docs.peeringdb.com"
version = "1.0.0"
description = "PeeringDB Documentation site"
authors = [
    {name="Outreach Committee", email = "outreachcom@lists.peeringdb.com"},
    ]

readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "jinja2>=3",
    "markdown",
    "markdown-include>=0.5",
    "mkdocs>=1.6.1",
]
