[project]
name = "docs.peeringdb.com"
version = "1.0.0"
description = "PeeringDB Documentation site"
authors = [
    {name="Outreach Committee", email = "outreachcom@lists.peeringdb.com"},
    ]

readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "jinja2>=3.1.6",
    "markdown",
    "markdown-include>=0.5",
    # needs theme update and warning fixes for newer mkdocs version, so locking at 1.4.3 for now:
    "mkdocs==1.4.3",
]
